--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Главная страница</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,700&display=swap&subset=cyrillic"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -16,77 +17,107 @@
     <!--<span></span> строчный спан-->
     <div class="wrapper">
         <div class="header">
-            <div class="container">
-                <a href="#" class="logo">
-                    <img src="./img/logo/logo.png" alt="campy logo" class="logo">
-                </a>
-                <div class="contacts">
-                    <a href="tel:88000039210" class="contacts__phone">8 (800) 00-392-10</a>
-                    <div class="contacts__desc">График работы </div>
+            <div class="container clearfix">
+                <div class="header__left">
+                    <a href="#" class="logo-link">
+                        <img src="./img/logo/logo.png" alt="campy logo" class="logo">
+                    </a>
                 </div>
+                <div class="header__right">
+                    <div class="contacts">
+                        <a href="tel:88000039210" class="contacts__phone">8 (800) 00-392-10</a>
+                        <div class="contacts__desc">График работы </div>
+                    </div>
+                </div>
+
             </div>
         </div>
         <div class="maincontent">
-            <div class="container">
+            <div class="container clearfix">
+                <div class="nav">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">
+                                <div class="nav_icon"></div>
+                                <div class="nav_text">Главная</div>
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">
+                                <div class="nav_icon"></div>
+                                <div class="nav_text">Отзывы</div>
+                            </a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#" class="nav__link">
+                                <div class="nav_icon"></div>
+                                <div class="nav_text">Экипаж</div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
                 <div class="content">
+
                     <div class="desc">
                         <div class="desc__img"></div>
                         <div class="desc__text"></div>
                     </div>
-                </div>
-                <div class="nav">
-
-                </div>
-                <div class="latest-news">
-                    <h1 class="title">Последние новости</h1>
-                    <ul class="latest-news__list">
-                        <li class="latest-news__item">
-                            <div class="latest-news__foto">
-                                <img src="./img//news/planeflying.jpg" alt="" class="latest-news__foto-pic">
-                            </div>
-                            <div class="latest-news__text">
-                                <div class="latest-news__date">12.10.2016</div>
-                                <div class="latest-news__h3">Ночные перелёты дешевле!</div>
-                                <div class="latest-news__content">
-                                    Летящий в ночном небе самолет — зрелище загадочное и романтическое. Крылатая машина
-                                    величественно плывет в вышине, мерцая разноцветными огнями, и почему-то кажется, что
-                                    она
-                                    наполнена удивительными людьми, спешащими далеко-далеко по очень важным делам.
+                    <div class="latest-news">
+                        <h1 class="title">Последние новости</h1>
+                        <ul class="latest-news__list">
+                            <li class="latest-news__item">
+                                <div class="latest-news__foto">
+                                    <img src="./img//news/planeflying.jpg" alt="" class="latest-news__foto-pic">
                                 </div>
-                            </div>
-                        </li>
-                        <li class="latest-news__item">
-                            <div class="latest-news__foto">
-                                <img src="./img//news/Photo.jpg" alt="" class="latest-news__foto-pic">
-                            </div>
-                            <div class="latest-news__text">
-                                <div class="latest-news__date">01.02.2016</div>
-                                <div class="latest-news__h3">Путешествие в Грузию стало доступнее</div>
-                                <div class="latest-news__content">
-                                    Экскурсии по Грузии в 2017 году от русских гидов: самые интересные маршруты в Грузии
-                                    от
-                                    профессиональных гидов. Обзорные, пешеходные, автомобильные, тематические экскурсии
-                                    по
-                                    интересным городам и курортам Грузии. Не пропустите такую возможность!
+                                <div class="latest-news__text">
+                                    <div class="latest-news__date">12.10.2016</div>
+                                    <div class="latest-news__h3">Ночные перелёты дешевле!</div>
+                                    <div class="latest-news__content">
+                                        Летящий в ночном небе самолет — зрелище загадочное и романтическое. Крылатая
+                                        машина
+                                        величественно плывет в вышине, мерцая разноцветными огнями, и почему-то кажется,
+                                        что
+                                        она
+                                        наполнена удивительными людьми, спешащими далеко-далеко по очень важным делам.
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="latest-news__item">
-                            <div class="latest-news__foto">
-                                <img src="./img//news/Layer_5.jpg" alt="" class="latest-news__foto-pic">
-                            </div>
-                            <div class="latest-news__text">
-                                <div class="latest-news__date">22.12.2015</div>
-                                <div class="latest-news__h3">Детские авиабилеты доступны для бизнес-класса</div>
-                                <div class="latest-news__content">
-                                    Путешествие на самолете с детьми - небольшое испытание для родителей.
-                                    Но это не экстремальное приключение, а обычный цивилизованный поход.
-                                    Тем более, различные авиакомпании стараются помочь скидками на детские авиабилеты,
-                                    специальным питанием и другими услугами на борту лайнера.
+                            </li>
+                            <li class="latest-news__item">
+                                <div class="latest-news__foto">
+                                    <img src="./img//news/Photo.jpg" alt="" class="latest-news__foto-pic">
                                 </div>
-                            </div>
-                        </li>
-                    </ul>
+                                <div class="latest-news__text">
+                                    <div class="latest-news__date">01.02.2016</div>
+                                    <div class="latest-news__h3">Путешествие в Грузию стало доступнее</div>
+                                    <div class="latest-news__content">
+                                        Экскурсии по Грузии в 2017 году от русских гидов: самые интересные маршруты в
+                                        Грузии
+                                        от
+                                        профессиональных гидов. Обзорные, пешеходные, автомобильные, тематические
+                                        экскурсии
+                                        по
+                                        интересным городам и курортам Грузии. Не пропустите такую возможность!
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="latest-news__item">
+                                <div class="latest-news__foto">
+                                    <img src="./img//news/Layer_5.jpg" alt="" class="latest-news__foto-pic">
+                                </div>
+                                <div class="latest-news__text">
+                                    <div class="latest-news__date">22.12.2015</div>
+                                    <div class="latest-news__h3">Детские авиабилеты доступны для бизнес-класса</div>
+                                    <div class="latest-news__content">
+                                        Путешествие на самолете с детьми - небольшое испытание для родителей.
+                                        Но это не экстремальное приключение, а обычный цивилизованный поход.
+                                        Тем более, различные авиакомпании стараются помочь скидками на детские
+                                        авиабилеты,
+                                        специальным питанием и другими услугами на борту лайнера.
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
