--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Главная страница</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,700&display=swap&subset=cyrillic"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <!--Обнуление всех стилей браузера-->
+    <link rel="stylesheet" href="css/normalize.css"> <!--Обнуление всех стилей браузера-->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -39,20 +38,20 @@
                 <div class="nav">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link-active">
-                                <div class="nav__icon-main"></div>
+                            <a href="#" class="nav__link_active">
+                                <div class="nav__icon nav__icon_main"></div>
                                 <div class="nav__text">Главная</div>
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">
-                                <div class="nav__icon-feed"></div>
+                                <div class="nav__icon nav__icon_feed"></div>
                                 <div class="nav__text">Отзывы</div>
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__link">
-                                <div class="nav__icon-team"></div>
+                                <div class="nav__icon nav__icon_team"></div>
                                 <div class="nav__text">Экипаж</div>
                             </a>
                         </li>
